--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - dev
   pull_request:
     branches:
-      - dev 
+      - dev
 
 jobs:
   build-and-deploy:
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Flutter Web
-        run: flutter build web --release
+      - name: Build Flutter Web with custom base href
+        run: flutter build web --release --base-href="/wedding-for-you/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
