--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.1.0
   responsive_framework: ^1.0.0
   tailwind_colors:
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
